# mcpmesh

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  RELEASING.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml  real-network.yml
Formula/: mcpmesh.rb
cli/: ARCHITECTURE.md  Cargo.toml
cli/src/: allowlist.rs  client.rs  config.rs  control.rs  daemon.rs  daemonshell.rs  doctor.rs  enrollcmd.rs  ipc.rs  json.rs  lib.rs  limits.rs  main.rs  proxy.rs  render.rs  stream.rs  util.rs
cli/src/audit/: log.rs  mod.rs  record.rs
cli/src/backends/: mod.rs  socket.rs  spawn.rs
cli/src/blobs/: mod.rs  provider.rs  scope.rs
cli/src/daemon/: accept.rs  boot.rs  config_write.rs  dial.rs  handlers.rs  reach.rs  roster_install.rs  status.rs
cli/src/pairing/: mod.rs  rendezvous.rs  sas.rs
cli/src/roster/: distribute.rs  enroll.rs  freshness.rs  gate.rs  mod.rs  presence.rs  transport.rs
cli/tests/: audit_e2e.rs  blob_ac.rs  blob_gate.rs  cold_dial.rs  completions.rs  concurrency_cap.rs  daemon_autostart.rs  daemon_dispatch.rs  daemon_serve.rs  doctor.rs  embed_parity.rs  embedded_loopback.rs  enroll_e2e.rs  first_run.rs  hero_flow.rs  hero_flow_pairing.rs  hero_flow_roster.rs  load_ac.rs  one_shot_connect.rs  org_enroll.rs  pairing_porcelain.rs  pairing_rendezvous.rs  presence.rs  proxy_roundtrip.rs  pump_rate_limit.rs  reachability.rs  roster_distribute.rs  roster_install.rs  roster_sever.rs  spawn_backend.rs  staleness_sweep.rs  subscribe.rs  three_node_propagation.rs  watch_cli.rs
cli/tests/harness/: mod.rs
codec/: Cargo.toml  README.md
codec/src/: lib.rs
docs/: config.md  dev-two-machine-smoke.md  e2e-real.md  e2e-real.sh  embedding.md  load-soak.md  local-protocol.md  loopback.md  loopback.sh  operator.md  presentation.html
docs/specs/: mcpmesh-design.md  windows-support.md
docs/superpowers/plans/: 2026-07-20-real-network-test-tiers.md  2026-07-21-agent-friendly-cli.md  2026-07-22-embeddable-node.md  2026-07-23-set-nickname.md
docs/superpowers/specs/: 2026-07-20-real-network-test-tiers-design.md  2026-07-21-fleet-tier4-design.md  2026-07-22-embeddable-node-design.md  2026-07-23-set-nickname-design.md
fixtures/: transport-vocabulary.json
local-api/: Cargo.toml  README.md
local-api/examples/: status.py  status.rs  watch.rs
local-api/fixtures/: transport-vocabulary.json
local-api/src/: client.rs  codec.rs  lib.rs  paths.rs  principals.rs  protocol.rs  service.rs  transport.rs
local-api/src/transport/: unix.rs  windows.rs
local-api/tests/: canonical_exports.rs
net/: Cargo.toml  README.md
net/src/: endpoint.rs  errors.rs  framing.rs  identity.rs  lib.rs  registry.rs  service.rs  transport.rs
net/tests/: endpoint_smoke.rs  session.rs
node/: Cargo.toml
node/src/: allowlist.rs  config.rs  control.rs  daemon.rs  ipc.rs  lib.rs  limits.rs  node.rs  paths.rs  stream.rs  util.rs
node/src/audit/: log.rs  record.rs
node/src/backends/: socket.rs  spawn.rs
node/src/blobs/: scope.rs
node/src/daemon/: accept.rs  boot.rs  config_write.rs  dial.rs  handlers.rs  reach.rs  roster_install.rs
node/src/pairing/: mod.rs  rendezvous.rs  sas.rs
node/src/roster/: distribute.rs  enroll.rs  freshness.rs  gate.rs  transport.rs
node/tests/: start.rs
packaging/homebrew/: mcpmesh.rb
trust/: Cargo.toml  README.md
trust/src/: binding.rs  keys.rs  lib.rs  paths.rs
trust/src/roster/: mod.rs  mutate.rs  sign.rs  validate.rs
xtask/: Cargo.toml
xtask/src/: main.rs  publish.rs
